--- a/app/views/homes/asset.html.erb
+++ b/app/views/homes/asset.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>投資信託について</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center">
-      <%= image_tag 'top22.png', size: "600x500" %>
+    <div class="col-12 col-md-6 text-center">
+      <%= image_tag 'top22.png', width: '100%', height: '100%' %>
     </div>
     <div class="col">
       <div class="row">
-        <div class="col mt-5">
+        <div class="col-10">
           <h3>値動きする資産に投資したい<br>初心者におすすめ</h3>
         </div>
       </div>
-      <div class="row my-3">
-        <div class="col">
+      <div class="row py-3">
+        <div class="col-10">
           <p>
             投資信託とは、投資家から集めたお金を1つの大きな資金としてまとめ、運用の専門家が株式や債券などに投資・運用します。
             そして、投資額に応じて利益が還元される金融商品です。投資信託なら1万円程度から始められます。投資信託は複数の株式
@@ -26,13 +26,13 @@
       </div>
     </div>
   </div>
-  <div class="row my-3">
+  <div class="row py-3">
     <div class="col text-center">
       <h1>投資信託の主な投資先</h1>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-1"></div>
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-striped" style="table-layout:fixed;">
         <tr>
@@ -96,15 +96,15 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row mt-5">
+  <div class="row pt-5">
     <div class="col text-center">
       <h1>投資信託のメリットデメリット</h1>
     </div>
   </div>
-  <div class="row my-5">
-    <div class="col-1"></div>
+  <div class="row py-5">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -125,7 +125,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
   <div class="row">
     <div class="col">
