--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>個人向け国債つみたてNISA</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center">
-      <%= image_tag 'top19.png', size: "500x400" %>
+    <div class="col-12 col-md-6 text-center">
+      <%= image_tag 'top19.png', width: '100%', height: '100%' %>
     </div>
-    <div class="col">
+    <div class="col-10 col-md-6">
       <div class="row">
-        <div class="col mt-5">
+        <div class="col pt-5">
           <h3>つみたてNISAは,投資をしたことがない人<br>を意識したつくりになっている</h3>
         </div>
       </div>
-      <div class="row my-3">
+      <div class="row py-3">
         <div class="col">
           <p>
             長期的な視点で、分散された投資信託を活用して資産形成を行う皆さんを国が応援しますよ、というのが「つみたてNISA」です。
@@ -26,13 +26,13 @@
       </div>
     </div>
   </div>
-  <div class="row my-3">
+  <div class="row py-3">
     <div class="col text-center">
       <h1>つみたてNISAのメリットデメリット</h1>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-1"></div>
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -52,7 +52,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
   <div class="row">
     <div class="col">
@@ -66,33 +66,33 @@
 </div>
 <!--個人向け国債情報-->
 <div class="container">
-  <div class="row mt-5">
+  <div class="row pt-5">
     <div class="col text-center">
       <h1>個人向け国債について</h1>
     </div>
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <div class="col-4 mt-5">
+    <div class="col-10 col-sm-4 pt-5">
       <p>
         「個人向け国債」は、国が発行し、元本や利子をお支払いする「国債」のうち、原則として個人の方だけが保有していただける国債です。
         額面金額1万円から1万円単位でご購入いただけます。
         利子は半年毎のお受け取りで、満期時には元本（額面金額）が目減りすることなく戻ってくるので安心です。
       </p>
     </div>
-    <div class="col-7 text-center">
-      <%= image_tag 'top20.png', size: "500x400" %>
+    <div class="col-12 col-sm-7 text-center">
+      <%= image_tag 'top20.png', width: '100%', height: '100%' %>
     </div>
   </div>
 </div>
 <div class="container">
-  <div class="row mt-4">
+  <div class="row pt-4">
     <div class="col-12 text-center">
       <h2>個人向け国債のメリットデメリット</h2>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-1"></div>
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -112,9 +112,9 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col">
       <p>
         個人向け国債の買い方 [財務省サイト]
