--- a/app/views/homes/stock.html.erb
+++ b/app/views/homes/stock.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>株式について</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center">
-      <%= image_tag 'top6.png', size: "600x400" %>
+    <div class="col-12 col-md-6 text-center">
+      <%= image_tag 'top6.png', width: '100%', height: '100%' %>
     </div>
-    <div class="col">
+    <div class="col-10 col-md-6">
       <div class="row">
-        <div class="col mt-5">
+        <div class="col pt-5">
           <h3>配当金や優待をもらえて<br>値上がりしたら売却益も</h3>
         </div>
       </div>
-      <div class="row my-3">
+      <div class="row py-3">
         <div class="col">
           <p>
             株式投資とは、証券市場で株式を買って株主になり、経営に参加する権利や配当金を受け取る権利を得ること。
@@ -27,13 +27,13 @@
       </div>
     </div>
   </div>
-  <div class="row my-3">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>株式のメリットデメリット</h1>
     </div>
   </div>
   <div class="row my-3">
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -54,7 +54,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
   <div class="row">
     <div class="col">
@@ -71,33 +71,32 @@
 </div>
 <!--REIT(リート)-->
 <div class="container">
-  <div class="row mt-5">
+  <div class="row pt-5">
     <div class="col text-center">
       <h1>REIT(リート)について</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-1"></div>
-    <div class="col-5 mt-5">
+    <div class="col-12 col-md-6 pt-5">
       <p>
         複数の投資家から集めたお金でマンションやオフィスビル、商業施設などの不動産を購入し、賃貸収入や売却益などを投資家に還元する金融商品です。
         価格は銘柄により10万〜70万円程度、株式のように売買ができます。このREITを複数組み入れた投資信託なら1万円程度から購入できます。
         「Real Estate Investment Trust」の略称で、日本語に訳すと不動産投資信託という意味になります。
       </p>
     </div>
-    <div class="col-6 text-center">
-      <%= image_tag 'top21.png', size: "500x400" %>
+    <div class="col-12 col-md-6 text-center">
+      <%= image_tag 'top21.png', width: '100%', height: '100%' %>
     </div>
   </div>
 </div>
 <div class="container">
-  <div class="row mt-4">
+  <div class="row pt-4">
     <div class="col-12 text-center">
       <h2>REIT(リート)のメリットデメリット</h2>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-1"></div>
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -117,9 +116,9 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col">
       <p>
         REIT（リート）の始め方は？初心者でも分かる投資手順や銘柄選びを解説 サイト
