--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,5 @@
-<footer id="footer">
+<footer class="bg-dark" id="footer">
   <p id="page-top"><a href="#">Page Top</a></p>
-  <div class="py-3">
-    <div class="container-fluid">
-      <div class="row my-2 text-center">
-        <div class="col">
-          <%= link_to "", "https://twitter.com/sakatai_photo", class: "twitter fab fa-twitter fa-4x" %>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col mb-2">
-          <span class="footer-text">Copyright © Finance Bliss App All Rights Reserved.</span>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= link_to "", "https://twitter.com/sakatai_photo", class: "twitter fab fa-twitter fa-4x" %><br>
+  <span class="footer-text">Copyright © Finance Bliss App All Rights Reserved.</span>
 </footer>
