--- a/app/views/layouts/_topheader.html.erb
+++ b/app/views/layouts/_topheader.html.erb
@@ -20,7 +20,8 @@
         </ul>
       </div>
   </nav>
-  <h1 class="title">Finance Bliss App.</h1>
+  <h1 class="top-title">Finance Bliss App.</h1>
+  <h1 class="top-title2">FBA.</h1>
   <div id="video-area">
     <video id="bg-video" src="assets/pf.mp4" poster="" webkit-playsinline playsinline muted autoplay loop></video>
   </div>
