--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,11 +5,11 @@
         <%= render 'users/sidebar' %>
       </div>
     </div>
-    <div class="col-8 col-lg-6 main-content">
+    <div class="col-8 col-lg-6 main-content ml-2">
       <!--投稿一覧-->
       <%= render 'posts/index', posts: @posts %>
     </div>
-    <div class="col-3 d-none d-lg-block">
+    <div class="col-2 d-none d-lg-block">
       <%= render 'search/searchbar' %>
     </div>
   </div>
