--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,19 +3,23 @@
     <%= form_with model: @user, local:true do |f| %>
     <div class="col">
       <div class="row">
-        <div class="col-4"><%= link_to '', user_path(@user.id), class: 'all-btn fas fa-times fa-2x' %></div>
-        <div class="col-4"><h4>プロフィールを編集</h4></div>
-        <div class="col-4"><%= f.submit '保存', class: 'btn btn-outline-dark' %></div>
+        <div class="col-3"><%= link_to '', user_path(@user.id), class: 'all-btn fas fa-times fa-2x' %></div>
+        <div class="col-6"><h4>プロフィールを編集</h4></div>
+        <div class="col-3"><%= f.submit '保存', class: 'btn btn-outline-dark' %></div>
       </div>
-      <div class="row">
+      <div class="row py-4">
         <div class="col">
           <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, class: "rounded-circle", fallback: "no_image.jpg" %>
         </div>
       </div>
       <div class="row">
+        <label>
         <div class="col">
-          <%= f.attachment_field :profile_image, placeholder: "image" %>
+          <i class="fas fa-image fa-3x"></i>
+          <%= f.attachment_field :profile_image, placeholder: "image", class: 'image-up-none' %>
         </div>
+        </label>
+        <div class="col"></div>
       </div>
       <div class="row">
         <div class="col">
@@ -24,8 +28,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
-          <label for="inputIntroduction">紹介文　（最大160文字）</label>
+        <div class="col pt-2">
+          <label for="inputIntroduction">紹介文（最大160文字）</label>
           <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"紹介文", size: "30x5", class: "form-control" %>
         </div>
       </div>
