--- a/app/views/homes/deposit.html.erb
+++ b/app/views/homes/deposit.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col text-center">
       <h1>投資の前に定期預金の積み立てからの方</h1>
     </div>
   </div>
-  <div class="row mt-3">
+  <div class="row pt-3">
     <div class="col text-center">
-      <%= image_tag 'top12.png', size: "700x350" %>
+      <%= image_tag 'top12.png', width: '100%', height: '100%' %>
     </div>
   </div>
-  <div class="row my-3">
+  <div class="row py-3">
     <div class="col text-center">
       <h1>制限は少ないが金利が低い「定期積立預金」</h1>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-2"></div>
-    <div class="col-8">
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
+    <div class="col-12 col-sm-10">
       <p>
         毎月決まった積立日に、毎月決まった積立額を普通預金から自動積立します。最低預入額は金融機関によって異なりますが、
         条件に合えば自由に決めることができます。定期預金に対して制限が少ない点も特徴の一つです。その点金利が低いことを理解しておきましょう。<br>
@@ -24,15 +24,15 @@
         といった方におすすめな方法です。
       </p>
     </div>
-    <div class="col-2"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
-  <div class="row my-3">
-    <div class="col text-center">
+  <div class="row py-3 text-center">
+    <div class="col-10">
       <h1>定期積立預金のメリットデメリット</h1>
     </div>
   </div>
-  <div class="row my-3">
-    <div class="col-1"></div>
+  <div class="row py-3">
+    <div class="col-1 d-none d-sm-block"></div>
     <div class="col-10">
       <table class="table table-bordered" style="table-layout:fixed;">
         <tr>
@@ -52,7 +52,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-1"></div>
+    <div class="col-1 d-none d-sm-block"></div>
   </div>
   <div class="row">
     <div class="col">
