--- a/app/views/homes/save.html.erb
+++ b/app/views/homes/save.html.erb
@@ -1,4 +1,4 @@
-  <div class="container">
+  <div class="container font-family">
     <div class="row mt-5">
       <div class="col-2"></div>
       <div class="col-8 mb-2">
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
       <div class="col text-center mb-4">
-        <%= link_to'もっと情報を知りたい方', new_user_session_path, class: 'btn btn-primary' %>
+        <%= link_to'もっと情報を知りたい方', new_user_session_path, class: 'btn btn-outline-dark' %>
       </div>
     </div>
   </div>
