--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,17 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <% if current_page?(about_path) %>
-      <%= render 'layouts/aboutheader' %>
-    <% elsif current_page?(root_path) %>
-      <%= render 'layouts/topheader' %>
-    <% else %>
-      <%= render 'layouts/header' %>
-    <% end %>
-    <%= render 'layouts/flash' %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
+    <div class="wrapper">
+      <% if current_page?(about_path) %>
+        <%= render 'layouts/aboutheader' %>
+      <% elsif current_page?(root_path) %>
+        <%= render 'layouts/topheader' %>
+      <% else %>
+        <%= render 'layouts/header' %>
+      <% end %>
+      <%= render 'layouts/flash' %>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
