--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,17 +1,15 @@
 <div class="col">
 <% post.post_comments.each do |post_comment| %>
-  <div class="row my-4">
+  <div class="row py-4">
     <div class="col-2"><%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
     <div class="col-8">
       <div class="row">
-        <div class="col">
-          <%= post_comment.user.name %>
-        </div>
+        <div class="col-2"></div>
+        <div class="col-10"><h6><strong><%= post_comment.user.name %></strong></h6></div>
       </div>
       <div class="row">
-        <div class="col">
-          <%= post_comment.comment %>
-        </div>
+        <div class="col-2"></div>
+        <div class="col-10"><%= post_comment.comment %></div>
       </div>
     </div>
     <% if post_comment.user == current_user %>
