--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,18 +1,22 @@
 <% posts.each do |post| %>
 <div class="row">
-  <div class="col-2">
+  <div class="col-12 col-lg-2">
     <%= link_to user_path(post.user.id) do %>
     <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
     <% end %>
   </div>
-  <div class="col-2"><%= post.user.name %></div>
-  <div class="col-5"><%= post.created_at.strftime('%Y/%m/%d') %></div>
+  <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
+  <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
 </div>
 <div class="row">
   <div class="col-2"></div>
-  <div class="col-10"><%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %></div>
+  <div class="col-10">
+    <%= link_to post_path(post.id) do %>
+    <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
+    <% end %>
+  </div>
 </div>
-<div class="row my-4">
+<div class="row py-4">
   <div class="col-2"></div>
   <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
 </div>
