--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,15 +1,20 @@
 <div class="container">
   <%= form_with model: @post, local:true do |f| %>
-  <div class="row my-5">
+  <div class="row py-5">
     <div class="col-2"></div>
     <div class="col-8">
-      <div class="row">
+      <div class="row pb-4">
         <div class="col-2"><%= link_to '', post_path(@post.id), class: 'all-btn fas fa-times fa-2x' %></div>
         <div class="col-6"><h4>投稿内容を編集</h4></div>
         <div class="col-2"><%= f.submit '保存', class: 'btn btn-outline-dark' %></div>
       </div>
       <div class="row">
-        <div class="col"><%= f.attachment_field :image, placeholder: "image" %></div>
+        <label>
+        <div class="col">
+          <i class="fas fa-image fa-3x"></i>
+          <%= f.attachment_field :image, placeholder: "image", class: 'image-up-none' %>
+        </div>
+        </label>
       </div>
       <div class="row">
         <div class="col">
