--- a/app/views/search/_searchbar.html.erb
+++ b/app/views/search/_searchbar.html.erb
@@ -1,5 +1,5 @@
 <div class="row sidebar">
-  <div class="col test-center mt-4" id="form">
+  <div class="col test-center" id="form">
     <%= form_with url:search_path, method: :get, local: true do |f| %>
       <%= f.text_field 'search[value]', class: "text-field" %>
       <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
