--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-4"><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "rounded-circle", fallback: "no_image.jpg", size: "100x100" %></div>
-  <div class="col-4"><%= user.name %></div>
+  <div class="col-3"></div>
   <% if @user.id == current_user.id %>
     <div class="col-4">
       <%= link_to 'プロフィールの編集', edit_user_path(user.id), class: 'btn btn-outline-dark d-none d-lg-block' %>
@@ -22,7 +22,14 @@
     </div>
   <% end %>
 </div>
-<div class="row mt-3 mb-5"><%= user.introduction %></div>
+<div class="row">
+  <div class="col pt-2">
+    <h3><strong><%= user.name %></strong></h3>
+  </div>
+</div>
+<div class="row mt-3 mb-5">
+  <div class="col"><%= user.introduction %></div>
+</div>
 <div class="row mb-3">
   <div class="col follow-count">
     <%= link_to user_followings_path(user.id) do %>
