--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container-fluid">
   <div class="row py-5">
-    <div class="col-3">
+    <div class="col-2 col-lg-3">
       <div class="row sidebar">
         <%= render 'users/sidebar' %>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-9 col-lg-6 ml-2">
       <%= render 'users/index', users: @users %>
     </div>
-    <div class="col-3 d-none d-lg-block">
+    <div class="col-2 d-none d-lg-block">
       <%= render 'search/searchbar' %>
     </div>
   </div>
