--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row py-5">
     <!--サイドバー一覧-->
-    <div class="col-3">
+    <div class="col-2 col-lg-3">
       <div class="row sidebar">
         <%= render 'users/sidebar' %>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-9 col-lg-6 ml-2">
       <%= render 'users/profile', user: @user %>
       <div class="row">
         <ul class="user-tabs">
@@ -18,17 +18,21 @@
       <% @likes.each do |like| %>
       <% post = Post.find_by(id: like.post_id) %>
       <div class="row">
-        <div class="col-2">
+        <div class="col-12 col-lg-2">
           <%= link_to user_path(post.user.id) do %>
           <%= attachment_image_tag post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %>
           <% end %>
           </div>
-        <div class="col-2"><%= post.user.name %></div>
-        <div class="col-5"><%= post.created_at.strftime('%Y/%m/%d') %></div>
+        <div class="col-6 col-md-5"><h5><strong><%= post.user.name %></strong></h5></div>
+        <div class="col-6 col-md-4"><%= post.created_at.strftime('%Y/%m/%d') %></div>
       </div>
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-10"><%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %></div>
+        <div class="col-10">
+          <%= link_to post_path(post.id) do %>
+          <%= attachment_image_tag post, :image, format:'jpg', width: '100%', height: '80%' %>
+          <% end %>
+        </div>
       </div>
       <div class="row my-4">
         <div class="col-2"></div>
@@ -48,7 +52,7 @@
       <% end %>
     </div>
     <!--検索機能-->
-    <div class="col-3 d-none d-lg-block">
+    <div class="col-2 d-none d-lg-block">
       <%= render 'search/searchbar' %>
     </div>
   </div>
