--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row py-5">
     <!--サイドバー一覧-->
-    <div class="col-3">
+    <div class="col-2 col-lg-3">
       <div class="row sidebar">
         <%= render 'users/sidebar' %>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-9 col-lg-6 ml-2">
       <%= render 'users/profile', user: @user %>
       <div class="row">
         <ul class="col user-tabs">
@@ -18,7 +18,7 @@
       <%= render 'posts/index', posts: @posts %>
     </div>
     <!--検索機能-->
-    <div class="col-3 d-none d-lg-block">
+    <div class="col-2 d-none d-lg-block">
       <%= render 'search/searchbar' %>
     </div>
   </div>
