--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,9 @@
   <div class="row py-5">
     <div class="col-3">
       <div class="row sidebar">
-        <%= render 'users/sidebar' %>
+        <div class="col">
+          <%= render 'users/sidebar' %>
+        </div>
       </div>
     </div>
     <div class="col-8 col-lg-6 main-content ml-2">
