--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </div>
 </div>
-<div class="row py-4">
+<div class="row pb-4">
   <div class="col-2"></div>
   <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
 </div>
