--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -2,7 +2,9 @@
   <div class="row py-5">
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
-        <%= render 'users/sidebar' %>
+        <div class="col">
+          <%= render 'users/sidebar' %>
+        </div>
       </div>
     </div>
     <div class="col-9 col-lg-6 ml-2">
