--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -3,7 +3,9 @@
     <!--サイドバー一覧-->
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
-        <%= render 'users/sidebar' %>
+        <div class="col">
+          <%= render 'users/sidebar' %>
+        </div>
       </div>
     </div>
     <div class="col-9 col-lg-6 ml-2">
@@ -34,7 +36,7 @@
           <% end %>
         </div>
       </div>
-      <div class="row my-4">
+      <div class="row pb-4">
         <div class="col-2"></div>
         <div class="col-10 introduction-link"><%= link_to post.introduction, post_path(post.id) %></div>
       </div>
