--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
     <!--サイドバー一覧-->
     <div class="col-2 col-lg-3">
       <div class="row sidebar">
-        <%= render 'users/sidebar' %>
+        <div class="col">
+          <%= render 'users/sidebar' %>
+        </div>
       </div>
     </div>
     <div class="col-9 col-lg-6 ml-2">
