--- a/app/views/homes/answer.html.erb
+++ b/app/views/homes/answer.html.erb
@@ -9,7 +9,7 @@
       <% if @result != 0 %>
         <h1>毎月<strong><span><%= @result.ceil %>円</span></strong>積み立てていけば達成できます</h1>
       <% else %>
-        <h3>正しく入力してください</h3>
+        <h3>【正しく入力していないか、条件を確認してください】</h3>
       <% end %>
     </div>
   </div>
