--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,11 @@
       </div>
     </div>
     <div class="col-9 col-lg-6 ml-2">
+      <div class="row pb-4">
+        <div class="col">
+          <h3><%= @users.count %>名のユーザーと繋がりましょう！</h3>
+        </div>
+      </div>
       <%= render 'users/index', users: @users %>
     </div>
     <div class="col-2 d-none d-lg-block">
