--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
           <li><%= link_to 'About', about_path, class: 'nav-link text-light' %></li>
           <li><%= link_to 'My page', user_path(current_user), class: 'nav-link text-light' %></li>
           <li><%= link_to 'Users', users_path, class: 'nav-link text-light' %></li>
-          <li><%= link_to 'Logb out', destroy_user_session_path, method: :delete, class: 'nav-link text-light' %></li>
+          <li><%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link text-light' %></li>
         <% else %>
           <li><%= link_to 'About', about_path, class: 'nav-link text-light' %></li>
           <li><%= link_to 'Investment', investment_path, class: 'nav-link text-light' %></li>
